--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
   </nav>
 
   <div class="container bg-dark">
-    <div class="game_area">
+
+    <button class="btn btn-default bg-dark" onclick="game_area_change()">test</button>
+    <div class="game_area" id="game_area">
       <h1 class="text-center">Project Game</h1>
       <div class="col text-center">
         <button class="btn btn-default bg-dark" onclick="load_smile()">Test Reload</button>
@@ -103,6 +105,7 @@
           <div class="col-md-4 offset-md-4">
             <button class="btn btn-default bg-dark" data-toggle="modal" data-target="#pausemenu">| |</button>
             <button class="btn btn-default bg-dark" onclick="alert_x()">t</button>
+            
             
           </div>
         </div>
