--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     crossorigin="anonymous"></script>
 
 
-  <script src="assets/js/smile_game.js"></script>
-  <!-- <script src="assets/js/sdsd.js"></script> -->
+  
 
   <style>
     body {
@@ -41,7 +40,7 @@
   <title>Game</title>
 </head>
 
-<body onload="load_smile()">
+<body>
 
 
 
@@ -131,7 +130,7 @@
     <!-- Mode end -->
 
     <!-- Pause -->
-    <div class="pause_menu min-vh-100 align-middle" id="pause_menu" >
+    <div class="pause_menu min-vh-100 align-middle" id="pause_menu" style="display: block;">
 
       <div class="pause_header text-center"> Game Paused </div>
 
@@ -346,10 +345,9 @@
   <script src="assets/js/browser.min.js"></script>
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
+  <script src="assets/js/smile_game.js"></script>
 
-  <script>
-  load_game();
-  </script>
+
 
 </body>
 
