Finishing touches done

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -91,15 +91,13 @@
 
         <div class="dropdown">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-            Mode
+            Region
           </a>
         
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Beginner</a>
-            <a class="dropdown-item" href="#">Easy</a>
-            <a class="dropdown-item" href="#">Medium</a>
-            <a class="dropdown-item" href="#">Hard</a>
-            <a class="dropdown-item" href="#">Veteran</a>
+            <a class="dropdown-item" href="#">Europe</a>
+            <a class="dropdown-item" href="#">America</a>
+            <a class="dropdown-item" href="#">Asia</a>
           </div>
         </div>
         <br>
@@ -110,7 +108,8 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Username</th>
-              <th scope="col">Time/Country</th>
+              <th scope="col">Time</th>
+              <th scope="col">Region</th>
               <th scope="col">Score</th>
             </tr>
           </thead>
@@ -118,20 +117,23 @@
             <tr>
               <th scope="row">1</th>
               <td>Mark</td>
-              <td>Otto</td>
-              <td>5656</td>
+              <td>2023-04-15 1:25:07</td>
+              <td>America</td>
+              <td>35000</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
-              <td>Thornton</td>
-              <td>3545</td>
+              <td>2023-04-12 1:25:07</td>
+              <td>Asia</td>
+              <td>25000</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td >Larry</td>
-              <td >Bird</td>
-              <td>356</td>
+              <td >2023-04-9 1:25:07</td>
+              <td>Europe</td>
+              <td>2000</td>
             </tr>
           </tbody>
         </table>
