Finalized Read me

--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
 
 
     <!-- mode select -->
-    <div class="mode_h_menu min-vh-100 align-middle" id="mode_h_menu">
+    <div class="mode_h_menu min-vh-100 align-middle" id="mode_h_menu" style="">
 
       <div class="mode_h_header text-center"> Select a mode <a data-toggle="modal" data-target="#modeModel"><i
             class="fa-regular fa-circle-question"></i></a>
